# XSS_detection_GPT4

./: GPT_XSS_Answer.csv  README.md  XSS_Detector.py  gpt4_turbo_GPT_XSS_Answer.csv  gpt4_turbo_processed_XSS_dataset.csv  gpt4o_processed_XSS_dataset.csv  prompt.txt  pyproject.toml  refine_dataset.py  result_analysis.py  use_gpt4.py
